# SmartGridToolbox

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CodingStyle.txt  INSTALL  INSTALL.md  Makefile.am  Makefile.in  NOTICE  README.md  TODO  aclocal.m4  configure  configure.ac  mainpage.dox  release_notes.txt
SgtCore/: Branch.cc  Branch.h  BranchAbc.cc  BranchAbc.h  Bus.cc  Bus.h  BusParser.cc  BusParser.h  BusParserPlugin.cc  BusParserPlugin.h  Common.cc  Common.h  CommonBranch.cc  CommonBranch.h  CommonBranchParser.cc  CommonBranchParser.h  CommonBranchParserPlugin.cc  CommonBranchParserPlugin.h  Component.cc  Component.h  ComponentAbc.h  ComponentCollection.h  Components.h  DdTransformer.cc  DdTransformer.h  DdTransformerParserPlugin.cc  DdTransformerParserPlugin.h  DgyTransformer.cc  DgyTransformer.h  DgyTransformerParser.cc  DgyTransformerParser.h  DgyTransformerParserPlugin.cc  DgyTransformerParserPlugin.h  Event.cc  Event.h  Gen.cc  Gen.h  GenAbc.cc  GenAbc.h  GenParser.cc  (+130 more)
SgtPowerTools/: Makefile.am  PowerToolsCpp.mm  SgtPowerTools.cc  SgtPowerTools.h  helloworld.cc  mainpage.dox  test.yaml
SgtServer/: Makefile.am  SgtServer.h  test_sgt_server.cc
SgtSim/: AutoTapChangerParserPlugin.cc  AutoTapChangerParserPlugin.h  Battery.cc  Battery.h  BatteryParser.cc  BatteryParser.h  BatteryParserPlugin.cc  BatteryParserPlugin.h  Branch.cc  Branch.h  BranchComp.cc  BranchComp.h  BranchCompParser.cc  BranchCompParser.h  BranchParser.cc  BranchParser.h  Bus.cc  Bus.h  BusComp.cc  BusComp.h  BusCompParser.cc  BusCompParser.h  BusParser.cc  BusParser.h  CdfParser.cc  CdfParser.h  Common.cc  Component.cc  Component.h  ComponentTemplate.h  DcPowerSource.cc  DcPowerSource.h  DcPowerSourceAbc.h  DcPowerSourceBase.h  DgyTransformer.cc  DgyTransformer.h  DgyTransformerParser.cc  DgyTransformerParser.h  Event.cc  Event.h  (+193 more)
SgtSim/OLD/: CdfParser.cc  CdfParser.h  MatpowerParser.cc
docs/: Doxyfile.in  DoxygenLayout.xml  Makefile.am  Makefile.in  basics_tutorial.html  building_controller_demo.html  compiling_and_linking.html  compiling_and_linking.md  component_collection_tutorial.html  doxygen_footer.html  index.html  install_linux.html  install_linux.md  install_macos.html  install_macos.md  network_tutorial.html  parsing_tutorial.html  properties_tutorial.html  pv_demo.html  sgt_architecture.html  sgt_config.html  simulation_tutorial.html  time_varying_loads_tutorial.html
docs/background/: DeltaGWye.graffle  OpenDelta.graffle  OpenDeltaB.graffle  load_flow.tex  power_flow_theory.tex  theory_notes.tex
docs/design/: initial_design_discussion.tex  tasks.txt
docs/manual/: manual.tex
docs/scripts/: embed_code.js
docs/stylesheets/: stylesheet.css
examples/: Makefile.am
examples/BuildingControllerDemo/: Building.cc  Building.h  BuildingController.cc  BuildingController.h  DATA201508_NSW1.csv  Makefile.am  building_controller_demo.cc  building_controller_demo.yaml  configure.ac  load_build.txt  make_data.m  plot_results.m  plot_results.py  price.txt
examples/MicrogridDemo/: Building.cc  Building.h  Makefile.am  Makefile.in  MicrogridController.cc  MicrogridController.h  cloud.txt  configure  configure.ac  external_temperature.txt  internal_thermal_power.txt  load_build.txt  make_data.m  microgriddemo.cc  microgriddemo.yaml  plot_results.m  plot_results.py  price.txt
examples/PVDemo/: Makefile.am  PVDemoController.cc  configure.ac  pvdemo_ieee57.cdf  pvdemo_ieee57_solar.yaml
examples/PvDemo/: Makefile.am  PvDemoSolver.cc  PvDemoSolver.h  PvInverter.cc  PvInverter.h  configure.ac  ieee57.yaml  input_nesta_case189_edin_1.yaml  ipopt.opt  permute_busses.m  plot_results.py  pvdemo.cc  pvdemo.yaml  pvdemo_big.yaml  pvdemo_ieee57.yaml  pvdemo_nesta_case189_edin.yaml
examples/ResidentialA/: Makefile.am  cloud_cover.txt  configure.ac  generate_cloud.m  generate_load.m  generate_loads.m  loads.txt  residential_a.cc  residential_a.yaml  residential_a_1p.yaml
examples/ResidentialDemo/: Makefile.am  cloud_cover.txt  configure.ac  residential_a.cc
experimental/SgtServer/: Makefile.am  SgtServer.h  configure.ac  server.cc  sgt_server.cc  test_cpp_rest.cc
src/: Arc.cpp  BalancedPowerFlowNR.cc  BalancedPowerFlowNR.h  Bound.cpp  Branch.cc  Branch.h  Branch1P.cc  Branch1P.h  Branch1PComponent.cc  Branch1PComponent.h  BranchParser.cc  BranchParser.h  Building.h  Bus.cc  Bus.h  Bus1P.cc  Bus1P.h  Bus1PComponent.cc  Bus1PComponent.h  BusData.cc  BusData.h  BusParser.cc  BusParser.h  CDFParser.cc  CDFParser.h  CMakeLists.txt  CdfParser.cc  CdfParser.h  CodingStyle.txt  Common.cc  Common.h  Complex.cpp  Component.cc  Component.h  DCPowerSourceBase.h  DGYTransformer.cc  DGYTransformer.h  DGYTransformerParser.cc  DGYTransformerParser.h  DcPowerSourceBase.h  (+180 more)
src/GLD/: link.h
src/REMOVED/: Branch1P.cc  Bus1P.cc  Load.h  ZipToGround1P.h
src/STUBS/: Edge.h  HeatFlow.h  Node.h
src/UNUSED/: Building.h  Hvac.h  Network.h  NetworkComponent.h  Property.h  Socket.cc
src/loads/: load_1.txt  load_10.txt  load_2.txt  load_3.txt  load_4.txt  load_5.txt  load_6.txt  load_7.txt  load_8.txt  load_9.txt
tests/: Makefile.am  Makefile.in  benchmark_matpower.m  benchmark_matpower.py  case_debug.m  case_trans3.m  case_trans3_shift.m  casedebug14.m  debug_matpower.cc  matpower2test.m  plot_benchmark_matpower.py  summarize_mp_cases.m  test_Vv_transformer.yaml  test_battery_and_inverter.yaml  test_dgy_transformer.yaml  test_include_A.yaml  test_include_B.yaml  test_line_flows.yaml  test_load_model_a.yaml  test_load_model_b.yaml  test_load_model_c.yaml  test_loops.yaml  test_mp_4gs.yaml  test_mp_6ww.yaml  test_mp_9.yaml  test_mp_SLPQ.yaml  test_mp_SLPQPV.yaml  test_mp_SLPV.yaml  test_mp_case14.compare  test_mp_case14_shift.compare  test_mp_case4gs.compare  test_mp_case57.compare  test_mp_case6ww.compare  test_mp_case9.compare  test_mp_caseSLPQ.compare  test_mp_caseSLPQPV.compare  test_mp_caseSLPV.compare  test_mp_case_debug.compare  test_mp_case_trans3.compare  test_mp_case_trans3_shift.compare  (+24 more)
tests/OLD/: tests.cc
tests/matpower_test_cases/: case118.m  case14.m  (+63 more)
(+2942 files in other folders)
