AUTOMAKE_OPTIONS = foreign

AM_CPPFLAGS =

lib_LIBRARIES = 

bin_PROGRAMS = microgriddemo

pvdemo_SOURCES = MicrogridController.h MicrogridController.cc microgriddemo.cc
pvdemo_LDADD = -lSgtCore -lSgtSim -larmadillo -lyaml-cpp -lPowerTools++ -lipopt -lcoinhsl -lboost_date_time -lklu -lamd -lbtf -lcolamd
