AUTOMAKE_OPTIONS = foreign

AM_CPPFLAGS =

lib_LIBRARIES = 

bin_PROGRAMS = microgriddemo

microgriddemo_SOURCES = MicrogridController.h MicrogridController.cc microgriddemo.cc
microgriddemo_LDADD = -lSgtCore -lSgtSim -larmadillo -lyaml-cpp -lPowerTools++ -lipopt -lcoinhsl -lboost_date_time -lklu -lamd -lbtf -lcolamd
