AC_INIT([Template], [v1.0.0], [dan.gordon@nicta.com.au], [Template])
AC_CONFIG_SRCDIR([src/helloworld.cc])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

m4_include([./m4_ax_cxx_compile_stdcxx_11.m4])
m4_include([./m4_ax_check_compile_flag.m4])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXX
AC_PROG_RANLIB
AC_LANG([C++])

AX_CXX_COMPILE_STDCXX_11

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
